@@ -320,6 +320,13 @@
         <button class="lightningImipButton lightningImipButton2" style="display: none"/>
         <button class="lightningImipButton lightningImipButton3" style="display: none"/>
       </div>
+      <div class="phishingBar notificationBar" style="display: none">
+        <img src="chrome://messenger/skin/icons/phishing.png" style="vertical-align: middle;" />
+        This message may be a scam:
+        <span class="ignore-warning">
+          <a href="javascript:">ignore warning</a>
+        </span>
+      </div>
       <div class="remoteContent notificationBar" style="display: none">
         Remote content was hidden:
         <span class="show-remote-content">
